--- a/Algorythm/Base.lproj/Main.storyboard
+++ b/Algorythm/Base.lproj/Main.storyboard
@@ -35,6 +35,7 @@
                             </button>
                         </subviews>
                         <animations/>
+                        <color key="backgroundColor" red="0.1764705882352941" green="0.18431372549019609" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="65B-Dd-R2l" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Dxb-Q7-DXD"/>
                             <constraint firstItem="aby-tv-Ucx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Q6G-mL-t7r"/>
@@ -63,26 +64,10 @@
                     <view key="view" contentMode="scaleToFill" id="upm-qS-F5k">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You haven't pressed the button" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="woT-mQ-sge">
-                                <rect key="frame" x="41" y="273" width="238" height="21"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <animations/>
-                        <color key="backgroundColor" red="0.35294117650000001" green="0.73333333329999995" blue="0.70980392160000005" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="woT-mQ-sge" firstAttribute="centerY" secondItem="upm-qS-F5k" secondAttribute="centerY" id="Bm3-Wl-CWG"/>
-                            <constraint firstItem="woT-mQ-sge" firstAttribute="centerX" secondItem="upm-qS-F5k" secondAttribute="centerX" id="GV7-Dx-keX"/>
-                        </constraints>
+                        <color key="backgroundColor" red="0.1764705882" green="0.1843137255" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <navigationItem key="navigationItem" title="Artists" id="gRI-On-WIq"/>
-                    <connections>
-                        <outlet property="buttonPressLabel" destination="woT-mQ-sge" id="ham-YI-5r7"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dyL-uq-iAT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -93,10 +78,11 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pr6-3b-Ard" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="BC2-DL-asf">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="BC2-DL-asf">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
+                        <color key="barTintColor" red="0.1764705882" green="0.1843137255" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
