--- a/Algorythm/Base.lproj/Main.storyboard
+++ b/Algorythm/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="pr6-3b-Ard">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Playlists-->
@@ -28,6 +29,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aby-tv-Ucx">
                                 <rect key="frame" x="137" y="392" width="46" height="30"/>
                                 <animations/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <segue destination="19u-Wo-OMq" kind="push" identifier="showPlaylistDetail" id="qJ0-hP-oox"/>
@@ -64,10 +66,68 @@
                     <view key="view" contentMode="scaleToFill" id="upm-qS-F5k">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4c9-Vh-hNp">
+                                <rect key="frame" x="0.0" y="64" width="320" height="290"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="4c9-Vh-hNp" secondAttribute="height" multiplier="32:29" id="vcx-vM-fXM"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Zj-ME-2lw">
+                                <rect key="frame" x="0.0" y="234" width="320" height="120"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Goes Here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Dp-Oy-v3d">
+                                        <rect key="frame" x="20" y="10" width="126" height="21"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="126" id="ZzL-d5-ENj"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cPX-me-aKb">
+                                        <rect key="frame" x="20" y="39" width="280" height="66"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="66" id="AHf-gE-00U"/>
+                                        </constraints>
+                                        <string key="text">This is a collection of my favorite songs to listen to when working out. It's got everything from fast cardio to power workout tunes. All the right fuel to get your engine going.</string>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="12"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.30027977195945948" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="1Dp-Oy-v3d" firstAttribute="top" secondItem="4Zj-ME-2lw" secondAttribute="top" constant="10" id="4yw-xr-4od"/>
+                                    <constraint firstItem="1Dp-Oy-v3d" firstAttribute="leading" secondItem="4Zj-ME-2lw" secondAttribute="leading" constant="20" id="NOg-wD-2DW"/>
+                                    <constraint firstAttribute="width" secondItem="4Zj-ME-2lw" secondAttribute="height" multiplier="8:3" id="SwX-mM-e0H"/>
+                                    <constraint firstAttribute="trailing" secondItem="cPX-me-aKb" secondAttribute="trailing" constant="20" id="nGB-Nf-3Km"/>
+                                    <constraint firstItem="cPX-me-aKb" firstAttribute="leading" secondItem="1Dp-Oy-v3d" secondAttribute="leading" id="umg-Rz-D3Z"/>
+                                    <constraint firstItem="cPX-me-aKb" firstAttribute="top" secondItem="1Dp-Oy-v3d" secondAttribute="bottom" constant="8" symbolic="YES" id="xam-TG-BfV"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" red="0.1764705882" green="0.1843137255" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="4Zj-ME-2lw" firstAttribute="bottom" secondItem="4c9-Vh-hNp" secondAttribute="bottom" id="MAX-fv-E6j"/>
+                            <constraint firstItem="4c9-Vh-hNp" firstAttribute="top" secondItem="DB8-DI-4u9" secondAttribute="bottom" id="cii-ya-DwC"/>
+                            <constraint firstItem="4c9-Vh-hNp" firstAttribute="leading" secondItem="upm-qS-F5k" secondAttribute="leading" id="dLJ-Qh-rbi"/>
+                            <constraint firstAttribute="trailing" secondItem="4c9-Vh-hNp" secondAttribute="trailing" id="qqa-sF-rbp"/>
+                            <constraint firstAttribute="trailing" secondItem="4Zj-ME-2lw" secondAttribute="trailing" id="sLO-g7-9s9"/>
+                            <constraint firstItem="4Zj-ME-2lw" firstAttribute="leading" secondItem="upm-qS-F5k" secondAttribute="leading" id="wPY-bI-aX8"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Artists" id="gRI-On-WIq"/>
+                    <connections>
+                        <outlet property="playlistCoverImage" destination="4c9-Vh-hNp" id="BcU-TM-NMh"/>
+                        <outlet property="playlistDescription" destination="cPX-me-aKb" id="3vG-ii-YT0"/>
+                        <outlet property="playlistTitle" destination="1Dp-Oy-v3d" id="Dzb-Rf-eyt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dyL-uq-iAT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
